<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vihva</string>
    <string name="text_teladecorrida">Vihva Watch</string>
    <string name="text_horas">horas</string>
    <string name="stringpetrusbr">Não existe um petrusBr é só o Pedrão mesmo</string>
    <string name="text_textnaotemdoenca">Você ainda não tem tratamentos cadastrados</string>
    <string name="text_sobrenos">Sobre nós</string>
    <string name="text_criadores">Idealizadores</string>
    <string name="text_observacao_medicamento">Observações do medicamento</string>
    <string name="text_mednaoselecionado">Sem médico</string>
    <string name="text_prescrição">Prescrito por</string>
    <string name="text_seg">Seg</string>
    <string name="text_terca">Ter</string>
    <string name="cmadddoenca">Como adicionar doenças</string>
    <string name="cmfuncionasos">Como funciona o SOS</string>
    <string name="cmaddremedio">Como adicionar remédios</string>
    <string name="cmexcluicoisas">Como excluir itens</string>
    <string name="cmeditarperfil">Como editar o perfil</string>
    <string name="text_quarta">Qua</string>
    <string name="text_quinta">Qui</string>
    <string name="text_sexta">Sex</string>
    <string name="text_sabado">Sáb</string>
    <string name="text_observacoes_doenca">Observações da doença</string>
    <string name="desc_doenca">Insira observações sobre a doença</string>
    <string name="desc_diagnostico">Diagnosticado em</string>
    <string name="text_domingo">Dom</string>
    <string name="text_confirm">Confirmar</string>
    <string name="text_receitadoem">Receitado em</string>
    <string name="text_lembreme">Lembre-me até</string>
    <string name="text_lembreas">Lembre-as</string>
    <string name="titulo_login">Vihva</string>
    <string name="title_login">Email</string>
    <string name="text_adicionarRemedio">Adicionar medicação</string>
    <string name="title_senha">Senha</string>
    <string name="title_button_login">Entrar</string>
    <string name="desc_alarme">Insira observações sobre a medicação</string>
    <string name="text_ncadastro">Não possui uma conta? <u>clique aqui!</u></string>
    <string name="text_cadastro">Escreva o seu email</string>
    <string name="text_csenha">Escreva a sua senha</string>
    <string name="text_confsenha">Confirmar senha</string>
    <string name="text_enviar">Enviar</string>
    <string name="text_redf_senha">Redefinir senha</string>
    <string name="redef_senha_dois">Insira seu e-mail para redefinir sua senha</string>
    <string name="text_confcadastro">Cadastrar</string>
    <string name="text_jasenha"><u>Já possuo conta</u></string>
    <string name="text_cnome">Nome</string>
    <string name="text_csobrenome">Sobrenome</string>
    <string name="text_idade">Digite sua Idade</string>
    <string name="text_prox">Próximo</string>
    <string name="text_caltura">Altura</string>
    <string name="text_cpeso">Peso</string>
    <string name="text_cmasc">Masculino</string>
    <string name="text_cfem">Feminino</string>
    <string name="text_cnao">Prefiro não dizer</string>
    <string name="text_breadNome">Nome</string>
    <string name="text_breadMaiorUm"> | </string>
    <string name="text_breadInfo">Dados</string>
    <string name="text_salvar">Salvar</string>
    <string name="text_breadOpc">Opcional</string>
    <string name="text_Esqminhasenha"><u>Esqueci minha senha</u> </string>
    <string name="text_genero">Gênero</string>
    <string name="text_biografia">Escreva sobre você</string>
    <string name="text_voltar">Voltar</string>
    <string name="text_300">0/300</string>
    <string name="text_error_login">Erro ao realizar login</string>
    <string name="text_navbar_inicio">Início</string>
    <string name="text_doencas_inicio">Seus Tratamentos</string>
    <string name="text_remedio_inicio">Seus remédios</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_editar">Editar</string>
    <string name="text_adc_doenca">Adicionar doença</string>
    <string name="text_popup_edita_topo">Editar informações</string>
    <string name="text_editar_title_bio">Editar Biografia</string>
    <string name="close_button_description">Fechar</string>
    <string name="button_back">Voltar</string>
    <string name="text_adc_alarme">Adicionar alarme</string>
    <string name="text_adc_remed">Adicionar remédio</string>
    <string name="text_alarme">Alarme</string>
    <string name="text_dura_alarme">Duração do alarme</string>
    <string name="text_data_acabar">Sem data para acabar</string>
    <string name="text_ate_data">Até a data</string>
    <string name="definir_alarme">Definir alarme</string>
    <string name="cancelar_alarme">cancelar alarme</string>
    <string name="hora_padrao">00:00</string>
    <string name="escolher_horario">escolher Horario</string>
    <string name="text_estoq_tip_alarme">Estoque e tipo do alarme</string>
    <string name="tip_medicação">Tipo de medicação</string>
    <string name="capsula">Cápsula</string>
    <string name="estoque">Estoque</string>
    <string name="text_do_estoq">Selecione o quanto vc tem de medicamentos em casa e receba alarmes quando estiver próximo do fim</string>
    <string name="estoq_atual">Estoque atual</string>
    <string name="lembre_me_em">Lembre-me em</string>
    <string name="prog_do_alarme">Programação do alarme</string>
    <string name="prog_do_remedio">Programação do remédio</string>
    <string name="conteudo_prog_remedio">Diriamente - 20 vezes entre as 8:00 e as 20:00 sem data de termino</string>
    <string name="frequencia">Frequência</string>
    <string name="frequencia_alarm">Frequência do alarme</string>
    <string name="trinta_caps">30 capsulas restantes</string>
    <string name="duracao">Duração</string>
    <string name="det_lembre">Detalhes do lembrete</string>
    <string name="det_alarme">Detalhes do alarme</string>
    <string name="apart_de">Apartir de</string>
    <string name="text_listaAmigos">Código de paciente</string>
    <string name="nom_do_remedio">Nome do remédio</string>
    <string name="sound_alarm">Som do alarme</string>
    <string name="homecoming">Homecoming</string>
    <string name="basic_call">Basic Call</string>
    <string name="vibration">Vibração</string>
    <string name="text_pausar_lembrete">Deletar lembrete</string>
    <string name="diariamente">Diariamente</string>
    <string name="dias_seman">Dias da semana</string>
    <string name="text_ciclo">Ciclo</string>
    <string name="qnd_ness">Quando necessário (nenhum lembrete)</string>
    <string name="intervalo">Intervalo</string>
    <string name="text_sos">Após tocar no botão acima, uma mensagem de texto seja enviada para um contato de confiança</string>
    <string name="text_warning">Atenção</string>
    <string name="text_restore_mensage">"Deseja realmente restaurar as preferencias para o padrão?"</string>
    <string name="text_celular">Celular</string>
    <string name="text_mensagem">Mensagem</string>
    <string name="default_msg">SOCORRO! Estou em perigo e preciso de assistência imediata. Esta mensagem foi enviada automaticamente pelo APP Vihva. Veja a última localização conhecida abaixo.</string>
    <string name="text_msg_padrao_deletar">Tem certeza que deseja deletar sua conta? essa ação é irreversível e irá
        deletar todos os seus dados. Confirme sua senha e clique no botão \"sim\" para realizar essa ação</string>
    <string name="text_restaurar">Restaurar</string>
    <string name="text_sos_titulo">Configurações SOS</string>
    <string name="text_titulo_configuracoes_principal">Configurações</string>
    <string name="text_titulo_add_doenca">Adicionar tratamentos</string>
    <string name="Toast_configuracoes_sucesso">Configurações salvas</string>
    <string name="preferences_success">Preferências salvas com sucesso!</string>
    <string name="config_btn_sos">Configurações do botão de sos</string>
    <string name="delet_cont">Deletar conta</string>
    <string name="text_criaperfil">Criação de perfil</string>
    <string name="text_btn_loguot">Logout</string>
    <string name="text_aviso">AVISO</string>
    <string name="text_aviso_dois">AVISO: O código acima tem a função de te conectar com seu médico e sua clínica. Por favor, mostre seu código apenas com um médico de confiança (código copiado para área de transferência)</string>
    <string name="hint_esqueci_senha">Insira seu email</string>
    <string name="text_hintsos">Enviaremos esta mensagem caso você toque no botão sos</string>
    <string name="btn_sim">Sim</string>
    <string name="btn_nao">Não</string>
    <string name="text_explicacaoDelete">Caso queira deletar a sua conta do Vihva e os dados e imagens que guardamos, clique no botão abaixo e confirme com sua senha</string>
    <string name="text_explicacaoLogout">Caso queira sair da sua conta do Vihva, clique no botão abaixo</string>
    <string name="text_naotemremedios">Você ainda não tem remédios cadastrados</string>
    <string name="text_notificacoes">Notificações</string>
    <string name="text_recomendacao_um">AVISO: Recomendamos a busca de um médico para ter certeza sobre seu estado, o Vihva não substitui profissionais da saúde</string>
    <string name="text_titulo_termos">A privacidade é essencial para sua saúde</string>
    <string name="text_termos_uso">Usamos seus dados para gerar estatísticas anônimas. Seus dados são compartilhados apenas com um profissional de confiança de sua escolha.</string>
    <string name="text_termos_uso_dois">Ao dar seu acordo, o utilizador confirma que concorda com os termos do aplicativo</string>
    <string name="termos_tudo_bem">Tudo bem para você?</string>
    <string name="text_termos_confirmacao">Sim, podemos seguir em frente</string>
    <string name="como_usamos_dados">Como usamos seus dados</string>
    <string name="text_termos">Termos</string>
    <string name="text_termos_dois">Geral
O documento esclarece os termos de uso e o tratamento de dados pessoais dos usuários da plataforma Vihva, ressaltando que a empresa não se responsabiliza por uso indevido de informações e possíveis danos causados pelo aplicativo.

Introdução
Ao iniciar o aplicativo, os termos são exibidos em um pop-up. Ao aceitá-los, o usuário declara estar ciente e de acordo. Recomenda-se revisão periódica dos termos, pois podem ser modificados.

Uso de Dados Pessoais
A plataforma utiliza o Firebase para armazenamento de dados. Informações como e-mail, senha, nome, idade, entre outras, são armazenadas e acessadas apenas pela Vihva Company e Google. Dados pessoais são protegidos, e a empresa não se responsabiliza por vazamentos causados por falhas no software ou compartilhamento de dados pelos usuários.

Funcionalidades da Plataforma

SOS: Obtém dados de contato e localização, armazenados no dispositivo do usuário.
Problemas de Saúde: Informações sobre problemas de saúde comuns são acessíveis aos usuários, mas a empresa não se responsabiliza pelo uso inadequado.
Medicamentos: Informações sobre medicamentos são fornecidas, mas a empresa recomenda consulta médica antes do uso.
Alarme: Lembra os usuários de tomar medicamentos, sem armazenar dados.
Calendário: Permite criar alertas de consultas médicas, sem armazenar dados.
Recomendações e Dicas
Usuários devem inserir dados pessoais corretamente e verificar informações médicas com profissionais de confiança. A plataforma segue a Lei de Proteção de Dados Pessoais (LGPD).

Leis e Garantias
A plataforma cumpre a LGPD, que regula o tratamento de dados pessoais, e as leis de falsa identidade e propriedade intelectual. Sanções são aplicáveis em casos de descumprimento.

Contato
Dúvidas podem ser esclarecidas através do e-mail: vivahproject475@gmail.com.

</string>
    <string name="text_habitos">Conte nos seus hábitos</string>
    <string name="text_tabagismo">Tabagismo</string>
    <string name="text_ciclismo">Cicilismo</string>
</resources>