<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView_topo_popup_edit_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cloudsoft_bold_700"
            android:text="@string/string_editar"
            android:textColor="@color/azul"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_nome_V2"
            style="@style/Edit_Text_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableTint="@color/Letras"
            android:hint="@string/text_breadNome"
            android:inputType="text"
            android:textColor="@color/Letras"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_topo_popup_edit_bio" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_sobrenome_V2"
            style="@style/Edit_Text_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableTint="@color/Letras"
            android:hint="@string/text_csobrenome"
            android:inputType="text"
            android:textColor="@color/Letras"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_nome_V2" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_idade_V2"
            style="@style/Edit_Text_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableTint="@color/Letras"
            android:hint="@string/text_idade"
            android:inputType="number"
            android:textColor="@color/Letras"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_sobrenome_V2" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_altura_V2"
            style="@style/Edit_Text_Login"
            android:drawableTint="@color/Letras"
            android:hint="@string/text_caltura"
            android:inputType="number"
            android:maxLength="3"
            android:layout_marginTop="8dp"
            android:textColor="@color/Letras"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_idade_V2" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_peso_V2"
            style="@style/Edit_Text_Login"
            android:drawableTint="@color/Letras"
            android:hint="@string/text_cpeso"
            android:inputType="number"
            android:maxLength="2"
            android:layout_marginTop="8dp"
            android:textColor="@color/Letras"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_altura_V2" />

        <TextView
            android:id="@+id/txt_genero"
            style="@style/text"
            android:text="@string/text_genero"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_peso_V2" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_genero">

            <!-- radio de feminino -->
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_fem_V2"
                style="@style/Radio_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cfem"
                android:textColor="@color/Letras"
                android:textSize="14sp" />

            <!-- radio de masculino -->

            <!-- radio de sem genero -->
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_masc_V2"
                style="@style/Radio_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cmasc"
                android:textColor="@color/Letras"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_Semgen_V2"
                style="@style/Radio_Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_cnao"
                android:textColor="@color/Letras"
                android:textSize="14sp" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_biografia_V2"
            style="@style/Edit_Text_Perfil"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/text_biografia"
            android:gravity="top"
            android:textColor="@color/Letras"
            android:textColorHint="@color/hint"
            android:inputType="textMultiLine"
            android:maxLength="300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_salvar_V2"
            style="@style/Button_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_salvar"
            android:textColor="@color/off_white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/edit_biografia_V2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
