<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".MainActivity">

    <!--View que abriga o container components-->
    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_login"
        />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text_Login"
        android:layout_marginTop="264dp"
        android:drawableRight="@drawable/ic_email"
        android:elevation="3dp"
        android:hint="@string/title_login"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/Letras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        android:hint="@string/text_csenha"
        app:hintEnabled="false"
        android:layout_marginTop="20dp"
        android:elevation="3dp">

        <!--edit text da senha -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_senha"
            style="@style/Edit_Text_Login"
            android:layout_width="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/title_senha"
            android:inputType="textPassword"
            android:maxLength="6"
            android:textColor="@color/Letras"
            android:textSize="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_entar"
        style="@style/Button"
        android:text="@string/title_button_login"
        android:textColor="@color/off_white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_senha"

        />

    <ProgressBar
        android:id="@+id/progressbar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="180dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponents"

        />

    <TextView
        android:id="@+id/text_tela_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/cloudsoft_bold_700"
        android:text="@string/text_ncadastro"
        android:textColor="@color/Letras"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressbar_login"
        app:layout_goneMarginTop="20dp" />

    <TextView
        android:id="@+id/titulo_login"
        android:layout_marginTop="140dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_login"
        android:textSize="70sp"
        android:textColor="@color/Letras"
        android:fontFamily="@font/peanut_butter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>